Improve Movie DAO test coverage